@@ -1,3 +1,10 @@
+2004-10-20  Tom Tromey  <tromey@redhat.com>
+
+	* verify-impl.c (merge_refs): Compare reference against iterator,
+	not ref2.
+
+	* verify-glue.c (vfy_tag): Mask off resolved flag.
+
 2004-10-19  Tom Tromey  <tromey@redhat.com>
 
 	* verify-impl.c (verify_instructions): Call vfy_note_local_type.
